# LotteryApp

./: .gitignore  CMakeLists.txt  LICENSE
LotteryApp/: main.cpp
LotteryApp/include/: Circulation.h  Circulation.hpp  CirculationRepository.hpp  Ticket.h  Ticket.hpp  TicketNums.hpp
LotteryApp/src/: Circulation.cpp  Ticket.cpp
LotteryApp/tools/: CirculationType.h  CirculationType.hpp  TicketNums.hpp
src/: Ticket.cpp  main.cpp
